后端：SpringBoot跨域问题解决 前端：学生管理(教师)、用户管理(教务、管理员)、论文管理(学生)、路由router设置

--- a/笔记.md
+++ b/笔记.md
@@ -1,3 +1,102 @@
+## 用户属性和事务
+
+### 通用类型用户(user)
+> userType(int)\
+> userId(int)\
+> userRealName(String)\
+> userName(String)\
+> password(String)\
+> sexual(boolean)\
+> accountCreateTime(YYYY-MM-DD)(String)\
+> phoneNum(String)\
+> email(String)\
+> ancestralPlace(String)\
+> politicalStatus(String)\
+> groupId(int)
+
+### 管理员(admin) extend (user)
+> userType(int) = 0\
+> userId(int)\
+> userName(String)\
+> passWord(String)\
+> accountCreateTime(YYYY-MM-DD)(String)
+
+### 教务员(officer) extend (user)
+> userType(int) = 1\
+> userId(int)\
+> userRealName(String)\
+> userName(String)\
+> passWord(String)\
+> sexual(boolean)\
+> accountCreateTime(YYYY-MM-DD)(String)\
+> phoneNum(String)\
+> email(String)\
+> registerCode(String)
+
+### 教师(teacher) extend (user)
+> userType(int) = 2\
+> registerCode(String)
+> 其他属性全部继承
+
+### 学生(student) extend (user)
+> userType(int) = 3\
+> 其他属性全部继承
+
+### 通用类型文件(file)
+> fileId(int)\
+> fileAddress(String)\
+> fileType(int)\
+> fileSize(double)\
+> fileName(String)\
+> studentId(int)\
+> teacherId(int)\
+> fileCreateTime(YYYY-MM-DD-HH-MM-SS)(String)\
+> situation(boolean) = false
+
+### 公告文件(file_post) extend (file)
+> fileId(int)\
+> fileAddress(String)\
+> fileType(int) = 0\
+> fileSize(double)\
+> fileName(String)\
+> fileCreateTime(YYYY-MM-DD-HH-MM-SS)(String)
+
+### 开题报告文件(file_opening_session) extend (file)
+> fileType(int) = 1\
+> 其他属性全部继承
+
+### 任务书文件(file_mission) extend (file)
+> fileType(int) = 2\
+> 其他属性全部继承
+
+### 中期检查文件(file_mid_check) extend (file)
+> fileType(int) = 3\
+> 其他属性全部继承
+
+### 论文初稿文件(file_thesis_first) extend (file)
+> fileType(int) = 4\
+> 其他属性全部继承
+
+### 论文定稿文件(file_thesis_finalize) extend (file)
+> fileType(int) = 5\
+> 其他属性全部继承
+
+### 论文终稿文件(file_thesis_final) extend (file)
+> fileType(int) = 6\
+> 其他属性全部继承
+
+### 公告类(post)
+> postId(int)\
+> postCreateBy(String)\
+> postCreateTime(YYYY-MM-DD-HH-MM-SS)(String)\
+> postIfFile(boolean)\
+> postFile(String)\
+> postHeader(String)\
+> postContent(String)\
+
+### 流程类(process)
+> \
+
 ## 搭建后台服务
 
 ### 跨域错误
