后端：用户查询(修改)、数据库格式修改 前端：教师管理->用户管理、学生列表查询、侧边栏高亮、教师列表

--- a/笔记.md
+++ b/笔记.md
@@ -8,6 +8,7 @@
 > password(String)\
 > sexual(boolean)\
 > accountCreateTime(YYYY-MM-DD)(String)\
+> accountChangeTime(YYYY-MM-DD)(String)\
 > phoneNum(String)\
 > email(String)\
 > ancestralPlace(String)\
