前端：用户增加和修改(共用统一弹窗)、用户删除、开屏界面(HomeView) 后端：用户删除(未完成)、增加和修改共用一个SQL

--- a/笔记.md
+++ b/笔记.md
@@ -13,6 +13,9 @@
 > email(String)\
 > ancestralPlace(String)\
 > politicalStatus(String)\
+> userAcademy(String)\
+> userMajor(String)\
+> userClass(String)\
 > groupId(int)
 
 ### 管理员(admin) extend (user)
@@ -85,6 +88,10 @@
 ### 论文终稿文件(file_thesis_final) extend (file)
 > fileType(int) = 6\
 > 其他属性全部继承
+> 
+### 答辩材料文件(file_oral_defense) extend (file)
+> fileType(int) = 7\
+> 其他属性全部继承
 
 ### 公告类(post)
 > postId(int)\
@@ -96,7 +103,18 @@
 > postContent(String)\
 
 ### 流程类(process)
-> \
+> processId(int)\
+> processCreateBy(int UserId)\
+> processCreateTime(YYYY-MM-DD-HH-MM-SS)(String)\
+> processDeadTime(YYYY-MM-DD-HH-MM-SS)(String)\
+> processFileOpeningSession(int studentId)\
+> processFileMission(int studentId)\
+> processFileMidCheck(int studentId)\
+> processFileThesisFirst(int studentId)\
+> processFileThesisFinalize(int studentId)\
+> processFileThesisFinal(int studentId)\
+> processFileOralDefense(int studentId)\
+> processCondition(String)
 
 ## 搭建后台服务
 
