前端：论文管理主要功能页面创建 后端：论文管理数据库表建立 手册：数据库表明细描述

--- a/笔记.md
+++ b/笔记.md
@@ -1,109 +1,37 @@
 ## 用户属性和事务
 
 ### 通用类型用户(user)
-> userType(int)\
-> userId(int)\
-> userRealName(String)\
-> userName(String)\
-> password(String)\
-> sexual(boolean)\
-> accountCreateTime(YYYY-MM-DD)(String)\
-> accountChangeTime(YYYY-MM-DD)(String)\
-> phoneNum(String)\
-> email(String)\
-> ancestralPlace(String)\
-> politicalStatus(String)\
-> userAcademy(String)\
-> userMajor(String)\
-> userClass(String)\
-> groupId(int)
-
-### 管理员(admin) extend (user)
-> userType(int) = 0\
-> userId(int)\
-> userName(String)\
-> passWord(String)\
-> accountCreateTime(YYYY-MM-DD)(String)
-
-### 教务员(officer) extend (user)
-> userType(int) = 1\
-> userId(int)\
-> userRealName(String)\
-> userName(String)\
-> passWord(String)\
-> sexual(boolean)\
-> accountCreateTime(YYYY-MM-DD)(String)\
-> phoneNum(String)\
-> email(String)\
-> registerCode(String)
-
-### 教师(teacher) extend (user)
-> userType(int) = 2\
-> registerCode(String)
-> 其他属性全部继承
-
-### 学生(student) extend (user)
-> userType(int) = 3\
-> 其他属性全部继承
+> userId(int)用户ID(学生学号教师教务号)\
+> userType(int)用户类型(管理0教务1教师2学生3)\
+> userRealName(varchar)用户真实姓名\
+> userName(varchar)用户名\
+> password(varchar)密码\
+> sexual(varchar)性别\
+> accountCreateTime(YYYY-MM-DD)(datetime)账号创建时间\
+> accountChangeTime(YYYY-MM-DD)(datetime)账号最近一次修改时间\
+> phoneNum(varchar)电话号码\
+> userAge(int)年龄\
+> groupId(int)分组号\
+> email(varchar)邮箱地址\
+> ancestralPlace(varchar)籍贯\
+> politicalStatus(varchar)政治面貌\
+> userAcademy(varchar)用户所属学院(学生教师)\
+> userMajor(varchar)用户所属专业(学生教师)\
+> userClass(varchar)用户所属班级(学生)
 
 ### 通用类型文件(file)
-> fileId(int)\
-> fileAddress(String)\
-> fileType(int)\
-> fileSize(double)\
-> fileName(String)\
-> studentId(int)\
-> teacherId(int)\
-> fileCreateTime(YYYY-MM-DD-HH-MM-SS)(String)\
-> situation(boolean) = false
-
-### 公告文件(file_post) extend (file)
-> fileId(int)\
-> fileAddress(String)\
-> fileType(int) = 0\
-> fileSize(double)\
-> fileName(String)\
-> fileCreateTime(YYYY-MM-DD-HH-MM-SS)(String)
-
-### 开题报告文件(file_opening_session) extend (file)
-> fileType(int) = 1\
-> 其他属性全部继承
-
-### 任务书文件(file_mission) extend (file)
-> fileType(int) = 2\
-> 其他属性全部继承
-
-### 中期检查文件(file_mid_check) extend (file)
-> fileType(int) = 3\
-> 其他属性全部继承
-
-### 论文初稿文件(file_thesis_first) extend (file)
-> fileType(int) = 4\
-> 其他属性全部继承
-
-### 论文定稿文件(file_thesis_finalize) extend (file)
-> fileType(int) = 5\
-> 其他属性全部继承
-
-### 论文终稿文件(file_thesis_final) extend (file)
-> fileType(int) = 6\
-> 其他属性全部继承
-> 
-### 答辩材料文件(file_oral_defense) extend (file)
-> fileType(int) = 7\
-> 其他属性全部继承
-
-### 公告类(post)
-> postId(int)\
-> postCreateBy(String)\
-> postCreateTime(YYYY-MM-DD-HH-MM-SS)(String)\
-> postIfFile(boolean)\
-> postFile(String)\
-> postHeader(String)\
-> postContent(String)\
+> fileID(int)文件ID\
+> fileAddress(varchar)文件地址\
+> fileType(int)文件类型\
+> fileSize(bigint)文件大小\
+> fileName(varchar)文件名\
+> studentId(int)所属学生ID\
+> teacherId(int)所属导师ID\
+> fileCreateTime(YYYY-MM-DD-HH-MM-SS)(datetime)文件创建日期\
+> fileChangeTime(YYYY-MM-DD-HH-MM-SS)(datetime)文件更新日期
 
 ### 流程类(process)
-> processId(int)\
+> processID(int)\
 > processCreateBy(int UserId)\
 > processCreateTime(YYYY-MM-DD-HH-MM-SS)(String)\
 > processDeadTime(YYYY-MM-DD-HH-MM-SS)(String)\
@@ -115,6 +43,92 @@
 > processFileThesisFinal(int studentId)\
 > processFileOralDefense(int studentId)\
 > processCondition(String)
+
+## 主流程逻辑
+> ### 毕业设计开始:
+> 教务/管理员设置日期，开启申报课题窗口(如果不在这段时间内无法申报)
+> ### 申报课题:
+> 学生在课题申报中提交申报课题(申报过课题后审核通过就不能再申报了,审核失败可以提交另一份)
+> ### process数据:
+> 课题名称(String)\
+> 课题是否以实验、实习、工程实践和社会调查为基础(String)\
+> 课题类别(String)\
+> 选题依据及课题简介(String)\
+> 论文研究方向(String)\
+> 撰写语种(String)\
+> 申报附件(文件)(file)\
+> 选题学生(String)\
+> 指导教师(String)\
+> 指导教师审核状态(未审核/通过/不通过)(Boolean)\
+> 教务审核状态(未审核/通过/不通过)(Boolean)
+> ### 开题报告:
+> 教务/管理员设置截止日期，如果申报通过才能提交(临近10天会进行公告提醒)
+> ### process数据:
+> 课题名称(导入)(String)\
+> 研究目的、意义、应用前景等(String)\
+> 研究现状(String)\
+> 研究目标、研究内容、拟解决的主要问题、创新点或特色(String)\
+> 研究方案、研究方法、研究进度安排(String)\
+> 开题报告附件(文件)(file)\
+> 参考文献(String)\
+> 选题学生(导入)(String)\
+> 指导教师(导入)(String)\
+> 指导教师审核状态(未审核/通过/不通过)\
+> 教务审核状态(未审核/通过/不通过)
+> ### 任务书:
+> 如上，都必须验证学生已经提交前一级材料和审核通过
+> ### process数据:
+> 课题名称(导入)(String)\
+> 本课题应达到的目标(String)\
+> 本课题任务的内容与要求(String)\
+> 本课题进度安排(String)\
+> 主要参考文献(String)\
+> 选题学生(导入)(String)\
+> 指导教师(导入)(String)\
+> 指导教师审核状态(未审核/通过/不通过)\
+> 教务审核状态(未审核/通过/不通过)
+> ### 中期检查:
+> 如上，都必须验证学生已经提交前一级材料和审核通过
+> ### process数据:
+> 课题名称(导入)(String)\
+> 指导教师(导入)(String)\
+> 选题学生(导入)(String)\
+> 中期检查附件(文件)(file)\
+> 阶段性总结(String)\
+> 存在的主要问题、原因及拟采取的措施(String)\
+> 指导教师审核状态(未审核/通过/不通过)\
+> 教务审核状态(未审核/通过/不通过)
+> ### 论文初稿提交:
+> 如上，都必须验证学生已经提交前一级材料和审核通过
+> ### process数据:
+> 课题名称(导入)(String)\
+> 指导教师(导入)(String)\
+> 选题学生(导入)(String)\
+> 论文初稿(文件)(file)\
+> 指导教师审核状态(未审核/通过/不通过)\
+> 教务审核状态(未审核/通过/不通过)
+
+## 流程状态修改:
+> ### 1.申报课题:
+> (1)可提交的状态:未提交(查找不到当前学生提交过的课题)/已提交审核失败(当前学生只有审核失败的课题)\
+> (2)不可提交的状态:已提交未审核/已提交审核通过\
+> (3)学生操作:提交(未提交)/查看(已提交)/修改内容{需要重新审核，流程重置到课题申报}(已提交)
+> ### 2.开题报告(申报课题已审核通过):
+> (1)可提交的状态:未提交(没有提交过的开题报告)\已提交审核失败(当前学生只有审核失败的开题报告)\
+> (2)不可提交的状态(申报课题已审核通过):已提交未审核/已提交审核通过\
+> (3)学生操作:提交(未提交)/查看(已提交)/修改内容{需要重新审核，流程重置到课题申报}(已提交)
+> ### 3.任务书(开题报告已审核通过):
+> (1)可提交的状态:未提交(没有提交过的任务书)\已提交审核失败(当前学生只有审核失败的任务书)\
+> (2)不可提交的状态:已提交未审核/已提交审核通过\
+> (3)学生操作:提交(未提交)/查看(已提交)/修改内容{需要重新审核，流程重置到课题申报}(已提交)
+> ### 4.中期检查(任务书已审核通过):
+> (1)可提交的状态:未提交(没有提交过的中期检查)\已提交审核失败(当前学生只有审核失败的中期检查)\
+> (2)不可提交的状态:已提交未审核/已提交审核通过\
+> (3)学生操作:提交(未提交)/查看(已提交)/修改内容{需要重新审核，流程重置到课题申报}(已提交)
+> ### 4.论文初稿(中期检查已审核通过):
+> (1)可提交的状态:未提交(没有提交过的论文初稿)\已提交审核失败(当前学生只有审核失败的论文初稿)\
+> (2)不可提交的状态:已提交未审核/已提交审核通过\
+> (3)学生操作:提交(未提交)/查看(已提交)/修改内容{需要重新审核，流程重置到课题申报}(已提交)
 
 ## 搭建后台服务
 
