前端：课题管理文件上传页面功能实现 后端：课题创建和文件上传后端接受信息并将记录存入数据库

--- a/笔记.md
+++ b/笔记.md
@@ -19,7 +19,7 @@
 > userMajor(varchar)用户所属专业(学生教师)\
 > userClass(varchar)用户所属班级(学生)
 
-### 通用类型文件(file)
+### 通用类型文件(fileInfo)
 > fileID(int)文件ID\
 > fileAddress(varchar)文件地址\
 > fileType(int)文件类型\
@@ -56,7 +56,7 @@
 > 选题依据及课题简介(String)\
 > 论文研究方向(String)\
 > 撰写语种(String)\
-> 申报附件(文件)(file)\
+> 申报附件(文件)(fileInfo)\
 > 选题学生(String)\
 > 指导教师(String)\
 > 指导教师审核状态(未审核/通过/不通过)(Boolean)\
@@ -69,7 +69,7 @@
 > 研究现状(String)\
 > 研究目标、研究内容、拟解决的主要问题、创新点或特色(String)\
 > 研究方案、研究方法、研究进度安排(String)\
-> 开题报告附件(文件)(file)\
+> 开题报告附件(文件)(fileInfo)\
 > 参考文献(String)\
 > 选题学生(导入)(String)\
 > 指导教师(导入)(String)\
@@ -93,7 +93,7 @@
 > 课题名称(导入)(String)\
 > 指导教师(导入)(String)\
 > 选题学生(导入)(String)\
-> 中期检查附件(文件)(file)\
+> 中期检查附件(文件)(fileInfo)\
 > 阶段性总结(String)\
 > 存在的主要问题、原因及拟采取的措施(String)\
 > 指导教师审核状态(未审核/通过/不通过)\
@@ -104,7 +104,7 @@
 > 课题名称(导入)(String)\
 > 指导教师(导入)(String)\
 > 选题学生(导入)(String)\
-> 论文初稿(文件)(file)\
+> 论文初稿(文件)(fileInfo)\
 > 指导教师审核状态(未审核/通过/不通过)\
 > 教务审核状态(未审核/通过/不通过)
 
