前端：课题申报功能根据是否在截止日期和是否已经提交进行动态页面生成

--- a/笔记.md
+++ b/笔记.md
@@ -157,3 +157,12 @@
 >org.apache.ibatis.binding.BindingException: Invalid bound statement (not found): org.lengs.springboot.mapper.UserMapper.listUsers] with root cause
 
 配置mapper.xml
+
+## 前端vue依赖安装失败解决办法
+>在日常使用命令npm install / npm install XX下载依赖的操作中，我经常会遇到无法解析依赖树的问题（依赖冲突）：\
+> npm install --legacy-peer-deps\
+> 当install时忽略所有对等依赖（peerDependencies），以npm版本4到6的样式安装。\
+> ignore all peerDependencies when installing, in the style of npm version 4 through version 6.
+
+## DEBUG:两个按钮根据condition判断显示，condition在created时通过两次查询赋值，渲染却只根据默认值显示
+>里面没加<template slot-scope="scope">标签，导致vue没给里面的dom更新
